--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-native-svg": "^12.3.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/styled-components": "^5.1.24",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "4.6.2"
   }
 }
