--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@types/styled-components": "^5.1.24",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "react-native-svg-transformer": "^1.0.0",
+    "tslint-react-hooks": "^2.2.2",
     "typescript": "4.6.2"
   }
 }
