--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run open-browser && next dev -p 3000",
+    "open-browser": "start http://localhost:3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@types/react-slick": "^0.23.8",
+    "axios": "^0.26.1",
+    "json-server": "^0.17.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -22,6 +25,7 @@
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
     "@types/styled-components": "^5.1.24",
+    "babel-plugin-styled-components": "^2.0.6",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-plugin-react-hooks": "^4.3.0",
