--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24",
     "babel-plugin-styled-components": "^2.0.6",
     "eslint": "8.11.0",
