--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "json-server": "^0.17.0",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-native-svg": "^12.3.0",
     "react-slick": "^0.28.1",
