--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/react-slick": "^0.23.8",
     "axios": "^0.26.1",
+    "concurrently": "^7.1.0",
     "json-server": "^0.17.0",
     "next": "12.1.0",
     "react": "17.0.2",
